--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="clothing">Clothing Level</string>
     <string name="met">Metabolic Rate</string>
+    <string name="image">image</string>
 </resources>
