--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="clothing">Clothing Level</string>
     <string name="met">Metabolic Rate</string>
     <string name="image">image</string>
+    <string name="settings">General Settings</string>
+    <string name="notification">Feedback notifications</string>
 </resources>
